--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Ganker</string>
-    <string name="title_activity_main">MainActivity</string>
+
+    <string name="ganhuo_image">GanHuo image</string>
 </resources>
