remove '今日力推' in GanHuo's title when the publish day is not today.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Ganker</string>
 
     <string name="ganhuo_image">GanHuo image</string>
+    <string name="image_description">image_description</string>
 </resources>
